--- a/ycwl-message-service-dev.yml
+++ b/ycwl-message-service-dev.yml
@@ -1,2 +1,27 @@
+server:
+  port: 8902
+
+eureka:
+  instance:
+    hostname: ${spring.application.name}
+  client:
+    service-url:
+      defaultZone: http://localhost:20881/eureka/
+
 sms:
+  signName: 悦宠未来
   provider: aliyun
+  template:
+    aliyun:
+      verifyCode:
+        id: SMS_134329837
+        params:
+          code
+    other:
+      verifyCode:
+        id: xxx
+        paramNames:
+          name
+  aliyun:
+    accessKeyId: LTAI2bi1Ssji3zIS
+    accessKeySecret: anTS8ZEETMItdu0BP4mdbW8DBhfsse
