--- a/ycwl/ycwl-message-service-dev.yml
+++ b/ycwl/ycwl-message-service-dev.yml
@@ -2,10 +2,8 @@ server:
   port: 8902
 
 spring:
-  application:
-    name: ycwl-message-service
   profiles:
-    active: '@env@'
+    active: @env@
 
 eureka:
   instance:
