--- a/ycwl/ycwl-file-dev.yml
+++ b/ycwl/ycwl-file-dev.yml
@@ -6,7 +6,7 @@ eureka:
     hostname: ${spring.application.name}
   client:
     service-url:
-      defaultZone: http://localhost:20881/eureka/
+      defaultZone: http://www.glove1573:20881/eureka/
 
 file:
   store:
