--- a/ycwl/ycwl-pet-server-dev.yml
+++ b/ycwl/ycwl-pet-server-dev.yml
@@ -14,4 +14,4 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://120.77.176.33:3306/alepet?useUnicode=true&characterEncoding=UTF-8
     username: root
-    password: admin
+    password: yuechongweilai
