--- a/micro-stage/gateway-gateway-dev.yml
+++ b/micro-stage/gateway-gateway-dev.yml
@@ -4,16 +4,14 @@ server:
 spring:
   cloud:
     gateway:
+      default-filters:
       routes:
         - id: user-api
-          uri: lb://lb-service-user
+          uri: lb://service-user
           predicates:
             - Path=/user/**
-
-lb-service-user:
-  ribbon:
-    listOfServers: service-user1:9001, service-user2:9002, service-user3:9003
-    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RoundRobinRule
+          filters:
+            - StripPrefix=1
 
 logging:
   level:
